# rpg-c17-sdl2

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  .lvimrc  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  conanfile.txt  run_tests.sh
scripts/: run_clang_format.sh  run_clang_tidy.sh  show_clang_diff.sh  update_local_vimrc.py
src/: direction.cpp  direction.h  direction.hpp  enum_array.h  frame_counter.hpp  logging.cpp  logging.h  main.cpp  main_editor.cpp
src/data/: map.cpp  map.h  map.hpp  table.h  table.hpp
src/event/: mouse.cpp  mouse.h  mouse.hpp
src/gfx/: actor_animation.cpp  actor_animation.h  actor_animation.hpp  sprite_sheet.cpp  sprite_sheet.h  sprite_sheet.hpp
src/point/: point.h  point.hpp
src/sdl/: event.cpp  event.h  event.hpp  helpers.cpp  helpers.hpp  keyboard_state.cpp  keyboard_state.h  keyboard_state.hpp  loader.cpp  loader.h  ptr.h  ptr.hpp  renderer.cpp  renderer.h  renderer.hpp  surface.cpp  surface.h  surface.hpp  texture.cpp  texture.h  texture.hpp  window.cpp  window.h  window.hpp
src/serialization/: result.h  serialization.h  serialization.hpp
src/utils/: assert.cpp  assert.hpp  strings.cpp  strings.h
test/: mock_clock.cpp  mock_clock.h  prelude.h  prelude.hpp  test_direction.cpp  test_frame_counter.cpp  test_logging.cpp  test_main.cpp  test_mock_clock.cpp
test/gfx/: test_sprite_sheet.cpp
test/point/: test_point.cpp
test/sdl/: mock_texture.cpp  mock_texture.h  mock_texture.hpp  test_event.cpp  test_keyboard_state.cpp  test_renderer.cpp
